# pvmsafe

./: .gitignore  Cargo.toml  DECISIONS-TO-BE-MADE.md  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: deploy-frontend.yml
demo/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
demo/frontend/src/: App.tsx  api.ts  styles.css
demo/frontend/src/pages/: Demo.tsx  Docs.tsx  Home.tsx
pvmsafe-example/: Cargo.toml  ERC20Full.sol  MyToken.sol  Vault.sol
pvmsafe-example/src/: pvmsafe-example-erc20-full.rs  pvmsafe-example-erc20-vulnerable.rs  pvmsafe-example-macro-pico-alloc.rs  pvmsafe-example-vault-vulnerable.rs  pvmsafe-example-vault.rs
pvmsafe-macros/: Cargo.toml
pvmsafe-macros/src/: effects.rs  lib.rs  pipeline.rs  reentrancy.rs  strip.rs
pvmsafe-macros/src/effects/: atoms.rs  check.rs  infer.rs  mod.rs
pvmsafe-macros/src/refine/: check.rs  fm.rs  lir.rs  mod.rs  translate.rs
