[package]
name = "pvmsafe"
version = "0.1.0"
edition = "2024"
authors = ["Alan"]
description = "Compile-time verification for pallet-revive contracts: refinements, arithmetic safety, conservation of value, and CEI ordering."
license = "MIT OR Apache-2.0"
repository = "https://github.com/alk0x1/pvmsafe"
readme = "../README.md"
keywords = ["polkadot", "pallet-revive", "polkavm", "verification", "smart-contracts"]
categories = ["development-tools", "no-std"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "visit", "visit-mut"] }
quote = "1"
proc-macro2 = "1"
